# iiirc

./: README.md  node.py  pyproject.toml
COIN/: blockchain.py  connections.py  peers.py  server.py  teat.py
