[tool.poetry]
name = "coin"
version = "0.1.0"
description = ""
authors = ["alpha-coder13 <amardeepsaha13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyNaCl = "^1.4.0"
structlog = "^21.2.0"
colorama = "^0.4.4"
marshmallow = "^3.14.0"
marshmallow-oneofschema = "^3.0.1"
aiohttp = "^3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
